double tap on mobile zoom actual fix

--- a/style/style.css
+++ b/style/style.css
@@ -1,11 +1,11 @@
-
-
+* {
+    touch-action: manipulation;
+}
 body {
     font-family: "Franklin Gothic", sans-serif;
     font-weight: bold;
     color: black;
-    margin-bottom: 30px
-    touch-action: manipulation;
+    margin-bottom: 30px;
 }
 button {
     font-weight: bold;
